[project]
name = "wtt-match"
version = "0.1.0"
description = "WTT table tennis video OCR player identification"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0.0",
    "opencv-python-headless>=4.9.0",
    "rapidocr-onnxruntime>=1.3.0",
    "numpy>=1.26.0",
]

[project.scripts]
wtt-match = "wtt_match.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wtt_match"]
